trunk/Archive2/d2/a8871788e97987/output
main.cpp: In function 'int main()':
main.cpp:13:51: error: invalid use of incomplete type 'struct CheckWithMessage<false, 350>'
     static_assert(CheckWithMessage<false, 10*5*7>{}, "!");
                                                   ^
main.cpp:4:8: error: declaration of 'struct CheckWithMessage<false, 350>'
 struct CheckWithMessage : std::true_type {};
        ^
